--- a/css/style.css
+++ b/css/style.css
@@ -1,43 +1,49 @@
-p, form {
+h2 {
   text-align: center;
-  font-family: cursive, sans-serif;
+  font-family: Verdana, Geneva, sans-serif;
+  color: #663300;
 }
-p {
-  font-size: 20px;
+
+h1 {
+  font-size: 52px;
+  text-align: center;
+  font-family: Verdana, Geneva, sans-serif;
+  color: #663300;
 }
+
+section {
+  min-height: 90vh;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: #fff;
+  bottom: 10px;
+}
+
 footer {
   background-color: black;
   color: gray;
   line-height: 20px;
   padding-top: 10px;
-  padding-bottom: 5px;
-  position: relative;
+  padding-bottom: 6px;
+  position: fixed;
   text-align: center;
   font-family: cursive, sans-serif;
+  width: 100%;
+  bottom: 0;
 }
-section {
-  min-height: 90vh;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  bottom: 10px;
-}
-body {
-  position: relative;
-  background-repeat: no-repeat;
-  background-position: center top;
-  background-size: cover;
-}
+
 .well {
-  margin-left: 35%;
-  margin-right: 35%;
-}
-h1, h2 {
-  margin-left: 35%;
-  margin-right: 35%;
   text-align: center;
-  font-family: cursive, sans-serif;
+  color: black;
+  margin-top: 50px;
+  margin-left: 30%;
+  margin-right: 30%;
 }
-img {
-  width: 100px;
-  height: 100px;
+
+body {
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-size: 100% 100%;
 }
